[FIX] web: filter menu in search bar responsive issue
If custom filter buttons name is long because language then dropdown has
horizontal scroll, to avoid scroll make dropdown responsive.
e.g. in French language "Add a custom filter" is translated into
"Ajouter un filtre personnalisé" so it is quite larger than the fixed width
dropdown.

So with this commit, we have removed the constraint of the max-width(scss mixin)
from the dropdown item to display the filter buttons properly.

task-1964133

--- a/addons/web/static/src/scss/search_view.scss
+++ b/addons/web/static/src/scss/search_view.scss
@@ -156,7 +156,6 @@
 // Filters
 .o_filters_menu {
     .o_filter_condition {
-        @include o-search-options-dropdown-custom-item;
         margin-bottom: 8px;
         .o_or_filter { // or between conditions
             display: none;  // hidden for the first condition
@@ -183,7 +182,9 @@
     }
     .o_add_filter_menu { // apply and add buttons
         display: none;  // Needed by the webclient
-        @include o-search-options-dropdown-custom-item;
+    }
+    .o_add_filter_menu, .o_filter_condition {
+        padding-left: 3rem;
     }
 }
 
